Service_And_Networking/NetworkPolicies/net_policy.yaml
## This is sample Network Policy to allow traffic from certain pods (api-pod) and the port to allow traffic on
## and the destination pod is marked by label "db"


apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-prod
    ports:
    - protocol: TCP
      port: 3306
